Corrected Nirs version

--- a/finite_difference/finite_difference.ipynb
+++ b/finite_difference/finite_difference.ipynb
@@ -111,13 +111,15 @@
     "Dm = 8.4\n",
     "Dc = 10\n",
     "beta = 0.1\n",
-    "alpha = 0\n",
-    "k_s = 0.001\n",
+    "alpha = 0.5\n",
+    "k_s = 0.01\n",
     "k_gr = 8.7\n",
     "k_br = 2.16E-5\n",
     "a_gr = 2\n",
     "a_br = 2\n",
-    "l = 0.003\n"
+    "m_c = 0.2\n",
+    "l = 0.003\n",
+    "\n"
    ]
   },
   {
@@ -205,7 +207,7 @@
     "        _type_: _description_\n",
     "    \"\"\"\n",
     "\n",
-    "    global a_br, k_br, a_gr, k_gr, Dm, Dc, beta, l\n",
+    "    global a_br, k_br, a_gr, k_gr, Dm, Dc, beta, l, m_c\n",
     "\n",
     "    Nt = int(round(T/dt))\n",
     "    t = np.linspace(0, Nt*dt, Nt+1)      # Mesh points in time\n",
@@ -226,7 +228,7 @@
     "\n",
     "\n",
     "    for n in t:\n",
-    "        v = (a_br*k_br*m[1] + a_gr*k_gr*m[1]) * (m[1]*p[1])\n",
+    "        v = (a_br*k_br*(m[1]**2) + a_gr*k_gr*(m[1]-m_c)) * p[1]\n",
     "\n",
     "        if user_action:\n",
     "            user_action(p=p, m=m, cf=cf, cb=cb, v=v, dx=dx, dt=dt, x=x, t=t, n=n)\n",
@@ -235,10 +237,7 @@
     "        f = get_f(p, cf, cb, dt, dx, v, alpha)\n",
     "        # Calculate boundaries\n",
     "        p_L, m_L, cf_L, cb_L = 0, m[-3], cf[-3], 0\n",
-    "        p_0 = 0\n",
-    "        m_0 = m[2]\n",
-    "        cf_0 = cf[2]\n",
-    "        cb_0 = 0 \n",
+    "        p_0, m_0, cf_0, cb_0 = 0, m[2], cf[2], 0\n",
     "\n",
     "        # Calculate inner-points\n",
     "        m_flux = Dm*dt/(2*dx**2) * \\\n",
@@ -254,18 +253,7 @@
     "        p[-1], m[-1], cf[-1], cb[-1] = p_L, m_L, cf_L, cb_L\n",
     "        p[0], m[0], cf[0], cb[0] = p_0, m_0, cf_0, cb_0\n",
     "\n",
-    "    return p, m, cf, cb, x, t\n",
-    "\n",
-    "\n",
-    "    \n",
-    "# I = [\n",
-    "#     lambda x: 0,\n",
-    "#     lambda x: 0,\n",
-    "#     lambda x: 0,\n",
-    "#     lambda x: 0,\n",
-    "# ]\n",
-    "\n",
-    "# sol = solver(I, 5, 2, 0.1, 0.01)"
+    "    return p, m, cf, cb, x, t\n"
    ]
   },
   {
@@ -279,9 +267,9 @@
     "from time import sleep\n",
     "\n",
     "I = [\n",
-    "    lambda p: 0.1 * (p < 0.15),\n",
+    "    lambda p: 0.1 * (p < 0.5),\n",
     "    lambda m: 0.5,\n",
-    "    lambda cf: 0.01,\n",
+    "    lambda cf: 0.1,\n",
     "    lambda cb: 0.05 * (cb < 0.15),\n",
     "]\n",
     "\n",
@@ -298,9 +286,10 @@
     "        return\n",
     "        \n",
     "    x = kwargs['x']\n",
-    "    m = kwargs['m']\n",
-    "    plt.title(f\"n={n}\")\n",
+    "    m = kwargs['p']\n",
+    "    plt.title(f\"t={n}\")\n",
     "    plt.plot(x, m, '-r')\n",
+    "    plt.ylim((0, 1))\n",
     "    display.display(plt.gcf())\n",
     "    display.clear_output(wait=True)\n",
     "    sleep(0.1)\n",
@@ -322,99 +311,7 @@
     "    return aggregate\n",
     "\n",
     "    \n",
-    "sol = solver(I, 1, 2, 0.01, 1e-6, user_action=plot_m, alpha_func=lambda y: 0.7*math.tanh(y))\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "    r_p^{(n+1, m)} = r_p^{(n, m)} + \\frac{\\Delta t}{2 \\Delta x} v_p^{(n,m)} (r_p^{(n, m+1)}-r_p^{(n, m-1)}) - \\Delta t \\alpha r_p^{(n,m)} r_{sb}^{(n,m)}\n",
-    "$$\n",
-    "\n",
-    "Boundary conditions on $x=0$:\n",
-    "$$\n",
-    "    r_p^{(n, 0)} = \\frac{k_{on, br} (r_m^{(n, 0)})^2 + k_{on, gr} r_m^{(n, 0)}}{a_{br}k_{on, br} (r_m^{(n, 0)})^2 + a_{gr}k_{on, gr} r_m^{(n, 0)}}\n",
-    "$$\n",
-    "\n",
-    "Boundary conditions on $x=M \\Delta x$:\n",
-    "$$\n",
-    "    r_p^{(n, M)} = r_p^{(n, M-1)}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def update_p(p, c_b, m, v, dt, dx, depoly=None):\n",
-    "#     \"\"\" Updates r_p in-place\n",
-    "\n",
-    "#     Args:\n",
-    "#         r_p (npt.ndarray 1XM): r_p at t=n*dt and x=m*dx for n in [1, N] and every m in [0, M]\n",
-    "#         r_sb (npt.ndarray 1XM): r_sb at t=n*dt and x=m*dx for n in [1, N] and every m in [0, M]\n",
-    "#         r_m (npt.ndarray 1XM): r_m at t=n*dt and x=m*dx for n in [1, N] and every m in [0, M]\n",
-    "#         v_p (npt.ndarray 1XM): v_p at t=n*dt and x=m*dx for n in [1, N] and every m in [0, M]\n",
-    "#         dt (float): time step\n",
-    "#         dx (float): x step\n",
-    "#         depoly (npt.ndarray 1XM): the term alpha*r_{sb}*r_p. If it is supplied then it is not calculated\n",
-    "#     \"\"\"\n",
-    "    \n",
-    "#     global alpha, k_on_br, k_on_gr, a_br, a_gr\n",
-    "    \n",
-    "#     if depoly is None:\n",
-    "#         depoly = alpha*r_p[1: -1]*r_sb[1: -1]\n",
-    "    \n",
-    "#     # Inner points    \n",
-    "#     r_p[1: -1] = r_p[1: -1] + (dt/(2*dx))*v_p[1: -1]*(r_p[2:] - r_p[:-2]) - dt*depoly\n",
-    "    \n",
-    "#     # Boundary x=M*dx\n",
-    "#     r_p[-1] = r_p[-2]\n",
-    "\n",
-    "#     # Boundary x=0\n",
-    "#     br = k_on_br*r_m[0]**2\n",
-    "#     gr = k_on_gr*r_m[0]\n",
-    "    \n",
-    "#     r_p[0] = (br + gr)/(a_br*br +a_gr*gr)\n",
-    "\n",
-    "#     return\n",
-    "\n",
-    "# r_p = np.zeros(M) + 1\n",
-    "# r_sb = np.zeros(M) - 1\n",
-    "# r_m = np.zeros(M) + 1\n",
-    "# v_p = np.zeros(M) - 1\n",
-    "\n",
-    "# print(r_p, end=\"\\n\\n\")\n",
-    "# update_p(r_p, r_sb, r_m, v_p, 0.1, 0.1)\n",
-    "# print(r_p)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "    r_m^{(n+1, m)} = r_m^{(n, m)} + horror + \\Delta t \\alpha r_p^{(n,m)} r_{sb}^{(n,m)}\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "    r_{s,f}^{(n+1, m)} = r_{s,f}^{(n, m)} + \\Delta t (D_s \\frac{r_{s, f}^{(n, m+1)} + r_{s, f}^{(n, m-1)} - 2 r_{s, f}^{(n, m)}}{\\Delta x ^2} - k_{on,s} r_{s,f}^{(n, m)} r_p^{(n, m)} + \\alpha r_p^{(n,m)} r_{sb}^{(n,m)})\n",
-    "$$\n",
-    "\n",
-    "Boundary conditions on $x=0$:\n",
-    "$$\n",
-    "    r_{s, f}^{(n, 0)} = r_{s, f}^{(n, 1)}\n",
-    "$$\n",
-    "\n",
-    "Boundary conditions on $x=M \\Delta x$:\n",
-    "$$\n",
-    "    r_{s, f}^{(n, M)} = r_{s, f}^{(n, M-1)}\n",
-    "$$"
+    "sol = solver(I, 1, 2, 0.01, 1e-6, user_action=plot_m, alpha_func=lambda y: math.tanh(y))\n"
    ]
   }
  ],
