poly solution for m

--- a/finite_difference/finite_difference.ipynb
+++ b/finite_difference/finite_difference.ipynb
@@ -31,7 +31,7 @@
     "            \\end{bmatrix} \\\\\n",
     "        \\end{align*} \\\\\n",
     "        \\begin{align*}\n",
-    "            v &= \\left. a_{br} k_{br} m^2 p \\right\\vert_{x=0}  + \\left. a_{gr}k_{gr} m p \\right\\vert_{x=0}\n",
+    "            v &= \\left. a_{br} k_{br} m^2 p \\right\\vert_{x=0}  + \\left. a_{gr}k_{gr} (m-m_c) p \\right\\vert_{x=0}\n",
     "        \\end{align*}\n",
     "$$\n",
     "\n",
@@ -80,14 +80,20 @@
     "#### Left boundary\n",
     "$$\n",
     "\\begin{align}\n",
-    "    p_{0} = 0 \\\\\n",
-    "    m_{0} = m_{2} \\\\\n",
+    "    p_{0} = p_2 \\\\\n",
     "    c_{f, 0} = c_{f, 2} \\\\\n",
     "    c_{b, 0} = 0 \\\\\n",
     "\\end{align}\n",
     "$$\n",
+    "As for $m$:\n",
     "\n",
-    "* Note that the boundary of $m$ in both cases is dependent on $(1-\\beta p)$. If $(1-\\beta p) \\rightarrow 0$, then $\\partial_x m \\rightarrow \\infty$ "
+    "$$\n",
+    "\\begin{align*}\n",
+    "    \\sum{J_{total}} &=J_m+J_p=D_m (1-\\beta p) \\nabla m +vp=0 \\\\\n",
+    "    \\Rightarrow  \\, & 0 = D_m(1-\\beta p_0) \\frac{m_1 - m_0}{\\Delta x} + p_0^2 \\left( a_{br} k_{br} m^2_0  + a_{gr}k_{gr} (m_0-m_c) \\right) \\\\\n",
+    "    \\Rightarrow \\, & 0 = p_0^2 a_{br} k_{br} \\cdot m^2_0 + \\left( p_0^2 a_{gr}k_{gr} - \\frac{D_m(1-\\beta p_0)}{\\Delta x} \\right) \\cdot m_0 + m_1 \\frac{D_m(1-\\beta p_0)}{\\Delta x} - p_0^2 a_{gr}k_{gr} m_c \\\\ \n",
+    "\\end{align*}\n",
+    "$$\n"
    ]
   },
   {
@@ -172,7 +178,7 @@
     "\n",
     "    depoly = (dt*alpha[1: -1])*cb[1:-1]*p[1:-1]\n",
     "    bind = (dt*k_s)*cf[1:-1]*p[1:-1]\n",
-    "\n",
+    "    # print(f\"Depoly={depoly}\")\n",
     "\n",
     "    f_p = v*dt/(2*dx) * (p[2:] - p[:-2]) - depoly\n",
     "    f_m = depoly\n",
@@ -228,16 +234,22 @@
     "\n",
     "\n",
     "    for n in t:\n",
-    "        v = (a_br*k_br*(m[1]**2) + a_gr*k_gr*(m[1]-m_c)) * p[1]\n",
+    "        v = (a_br*k_br*(m[0]**2) + a_gr*k_gr*(m[0]-m_c)) * p[0]\n",
     "\n",
     "        if user_action:\n",
     "            user_action(p=p, m=m, cf=cf, cb=cb, v=v, dx=dx, dt=dt, x=x, t=t, n=n)\n",
     "\n",
     "        \n",
     "        f = get_f(p, cf, cb, dt, dx, v, alpha)\n",
+    "        \n",
     "        # Calculate boundaries\n",
     "        p_L, m_L, cf_L, cb_L = 0, m[-3], cf[-3], 0\n",
-    "        p_0, m_0, cf_0, cb_0 = 0, m[2], cf[2], 0\n",
+    "        p_0, cf_0, cb_0 = p[2], cf[2], 0\n",
+    "\n",
+    "        poly = [a_br*k_gr*p[0]**2, p[0]**2 *a_gr*k_gr - Dm*(1 - beta*p[0])/(2*dx),  m[2]*Dm*(1-beta *p[0])/(2*dx) - p[0]**2 *a_gr*k_gr*m_c]\n",
+    "        m_12 = np.roots(poly)\n",
+    "        # print(m_12)\n",
+    "        m_0 = min(m_12) # TODO: check what value we should take\n",
     "\n",
     "        # Calculate inner-points\n",
     "        m_flux = Dm*dt/(2*dx**2) * \\\n",
@@ -267,10 +279,10 @@
     "from time import sleep\n",
     "\n",
     "I = [\n",
-    "    lambda p: 0.1 * (p < 0.5),\n",
-    "    lambda m: 0.5,\n",
+    "    lambda p: 0.1 * (p < 0.1),\n",
+    "    lambda m: 1,\n",
     "    lambda cf: 0.1,\n",
-    "    lambda cb: 0.05 * (cb < 0.15),\n",
+    "    lambda cb: 0.05 * (cb < 0.5),\n",
     "]\n",
     "\n",
     "# fig = plt.figure()\n",
@@ -280,13 +292,13 @@
     "    v_timestamp = kwargs['v']\n",
     "    v = np.append(v, v_timestamp)\n",
     "\n",
-    "def plot_m(**kwargs):\n",
+    "def plot(**kwargs):\n",
     "    n = kwargs['n']\n",
-    "    if not( n % 0.01 <= 1e-7):\n",
+    "    if not( n % 0.01 <= 1e-6):\n",
     "        return\n",
     "        \n",
     "    x = kwargs['x']\n",
-    "    m = kwargs['p']\n",
+    "    m = kwargs['m']\n",
     "    plt.title(f\"t={n}\")\n",
     "    plt.plot(x, m, '-r')\n",
     "    plt.ylim((0, 1))\n",
@@ -311,7 +323,7 @@
     "    return aggregate\n",
     "\n",
     "    \n",
-    "sol = solver(I, 1, 2, 0.01, 1e-6, user_action=plot_m, alpha_func=lambda y: math.tanh(y))\n"
+    "sol = solver(I, 1, 2, 0.01, 1e-6, user_action=aggregate_gen([\"m\", \"p\"]), alpha_func=lambda y: math.tanh(y))\n"
    ]
   }
  ],
