--- a/finite_difference/finite_difference.ipynb
+++ b/finite_difference/finite_difference.ipynb
@@ -118,7 +118,7 @@
     "Dc = 10\n",
     "beta = 0.1\n",
     "alpha = 0.5\n",
-    "k_s = 0.5\n",
+    "k_s = 2\n",
     "k_gr = 8.7\n",
     "k_br = 2.16E-5\n",
     "a_gr = 2\n",
@@ -184,8 +184,7 @@
     "    f_p = - v*dt/(dx) * (p[1:-1] - p[:-2]) - depoly\n",
     "    f_m = depoly\n",
     "    f_cf = depoly - bind\n",
-    "    f_cb = - v*dt/(dx) * (cb[1: -1] - cb[:-2]) - f_cf\n",
-    "    # print(f_p)\n",
+    "    f_cb = - v*dt/dx * (cb[1: -1] - cb[:-2]) - f_cf\n",
     "    \n",
     "    return f_p, f_m, f_cf, f_cb\n",
     "\n",
@@ -232,7 +231,7 @@
     "    cf = np.vectorize(I[2], otypes=[float])(x)\n",
     "    cb = np.vectorize(I[3], otypes=[float])(x)\n",
     "\n",
-    "    alpha = np.vectorize(alpha_func)(x)\n",
+    "    alpha = np.vectorize(alpha_func, otypes=[float])(x)\n",
     "\n",
     "\n",
     "    for n in t:\n",
@@ -245,8 +244,8 @@
     "        f = get_f(p, cf, cb, dt, dx, v, alpha)\n",
     "        \n",
     "        # Calculate boundaries\n",
-    "        p_L, m_L, cf_L, cb_L = 0, m[-3], cf[-3], 0\n",
-    "        p_0, cf_0, cb_0 = p[1], cf[2], 0\n",
+    "        p_L, m_L, cf_L, cb_L = 0, m[-2], cf[-2], cb[-2]\n",
+    "        p_0, cf_0, cb_0 = p[1], cf[1], 0\n",
     "        m_0 = m[1] - (dx/(Dm*(1-beta*p[0]))) * p[1]*m[1] * (a_br*k_br*m[1] + a_gr*k_gr)\n",
     "\n",
     "        # Calculate inner-points\n",
@@ -257,9 +256,8 @@
     "        \n",
     "        cf[1: -1] = cf[1: -1] + Dc*dt/(dx**2) * (cf[2:] + cf[:-2] - 2*cf[1:-1]) + f[2]\n",
     "        cb[1: -1] = cb[1: -1] + f[3]\n",
-    "\n",
+    "            \n",
     "        # Set boundaries\n",
-    "\n",
     "        p[-1], m[-1], cf[-1], cb[-1] = p_L, m_L, cf_L, cb_L\n",
     "        p[0], m[0], cf[0], cb[0] = p_0, m_0, cf_0, cb_0\n",
     "\n",
@@ -278,9 +276,9 @@
     "\n",
     "I = [\n",
     "    lambda p: 0.3 * (p < 4),\n",
-    "    lambda m: 0 * (1 < m < 3),\n",
-    "    lambda cf: 0  * (1 < cf < 3),\n",
-    "    lambda cb: 0.1 * (cb < 4),\n",
+    "    lambda m: 0.8 * (1 < m < 3),\n",
+    "    lambda cf: 0  * (2 < cf < 4),\n",
+    "    lambda cb: 0.2 * (2 < cb < 4),\n",
     "]\n",
     "\n",
     "# fig = plt.figure()\n",
@@ -352,7 +350,7 @@
     "\n",
     "\n",
     "    \n",
-    "sol = solver(I, 10, 2, 0.2, 1e-6, user_action=mass_sum, alpha_func=lambda y: 10)\n"
+    "sol = solver(I, 10, 0.6, 0.1, 1e-6, user_action=plot, alpha_func=lambda y: 10*math.tanh(0.5*y))\n"
    ]
   },
   {
@@ -373,30 +371,6 @@
    "source": [
     "plt.plot(100*(cofilin - cofilin[0])/cofilin[0])\n",
     "plt.title(\"% cofilin error vs iteration\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(sol[1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Notes\n",
-    "\n",
-    "percent of monomer difference with m_c:\n",
-    "\n",
-    "2.20327% on dt=1e-6 \n",
-    "\n",
-    "2.204861% on dt=0.5e-6\n",
-    "\n",
-    "m_c made p be unstable\n"
    ]
   }
  ],
