Fixed documentation to match the current code

--- a/finite_difference/finite_difference.ipynb
+++ b/finite_difference/finite_difference.ipynb
@@ -35,16 +35,33 @@
     "        \\end{align*}\n",
     "$$\n",
     "\n",
-    "With the boundaries both at $x=0$:\n",
+    "The following boundaries were taken into account: \n",
+    "\n",
+    "Boundary conditions at $x=0$\n",
+    "\n",
     "$$\n",
-    "    \\begin{align}\n",
-    "        &\\frac{\\partial p}{\\partial x} = 0 \\\\\n",
-    "        &D_m (1-\\beta p) \\frac{\\partial m}{\\partial x} - v p =  0 \\\\\n",
-    "        &\\frac{\\partial c_f}{\\partial x} = 0 \\\\\n",
-    "        &c_b = 0 \n",
-    "    \\end{align}\n",
+    "\\begin{align}\n",
+    "    \\frac{\\partial p}{\\partial x} &= 0 \\\\\n",
+    "    \\frac{\\partial c_f}{\\partial x} &= 0 \\\\\n",
+    "    c_{b} &= 0 \\\\\n",
+    "\\end{align}\n",
     "$$\n",
     "\n",
+    "As for $m$:\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "    \\sum{J_{total}} &=J_m+J_p=D_m (1-\\beta p) \\frac{\\partial m}{\\partial x} - vp=0\n",
+    "\\end{align}\n",
+    "$$\n",
+    "Boundary conditions at $x=L$\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "    p &= 0 \\\\\n",
+    "    \\frac{\\partial m}{\\partial x} &= 0 \\\\\n",
+    "    \\frac{\\partial c_f}{\\partial x} &= 0 \\\\\n",
+    "    \\frac{\\partial c_b}{\\partial x} &= 0 \\\\\n",
+    "\\end{align}\n",
+    "$$\n",
     "\n",
     "# Discretization\n",
     "**Convention**: A subscript of $i$ indicates the spatial discretizetion, an upperscript of $n$ indicates the temporal discretization. A subscript with no upper script means the current timestamp ($n$).\n",
@@ -56,7 +73,8 @@
     "    p_i^{n+1} &= p_i - \\frac{\\Delta t}{\\Delta x} \\cdot v (p_{i} - p_{i-1}) - Depoly \\\\\n",
     "    m_i^{n+1} &= m_i + D_m \\frac{\\Delta t}{2 \\Delta x^2} \\big[(2 - \\beta (p_i + p_{i+1}))(m_{i+1}-m_i) - (2 - \\beta (p_i + p_{i-1}))(m_{i}-m_{i-1}) \\big] + Depoly \\\\\n",
     "    c_{f,i}^{n+1} &= c_{f, i} + D_c \\frac{\\Delta  t}{\\Delta x^2} (c_{f, i+1} + c_{f, i-1} - 2 c_{f, i}) - Bind + Depoly \\\\\n",
-    "    c_{b,i}^{n+1} &= c_{b, i} - v \\frac{\\Delta  t}{2 \\Delta x} (c_{b, i} - c_{b, i-1}) + Bind - Depoly\n",
+    "    c_{b,i}^{n+1} &= c_{b, i} - v \\frac{\\Delta  t}{\\Delta x} (c_{b, i} - c_{b, i-1}) + Bind - Depoly \\\\\n",
+    "\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
@@ -74,7 +92,8 @@
     "    p_{M} = 0 \\\\\n",
     "    m_{M} = m_{M-2} \\\\\n",
     "    c_{f, M} = c_{f, M-2} \\\\\n",
-    "    c_{b, M} = 0 \\\\\n",
+    "    c_{b, M} = c_{b, M-2} \\\\\n",
+    "\n",
     "$$\n",
     "\n",
     "#### Left boundary\n",
@@ -86,14 +105,14 @@
     "\\end{align}\n",
     "$$\n",
     "As for $m$:\n",
-    "\n",
     "$$\n",
     "\\begin{align*}\n",
     "    \\sum{J_{total}} &=J_m+J_p=D_m (1-\\beta p) \\frac{\\partial m}{\\partial x} - vp=0 \\\\\n",
     "    \\Rightarrow  \\, & 0 = D_m(1-\\beta p_0) \\frac{m_1 - m_0}{\\Delta x} - p_1 \\left( a_{br} k_{br} m^2_1  + a_{gr}k_{gr} m_1 \\right) \\\\\n",
-    "    \\Rightarrow \\, & m_0 = m_1 - \\frac {\\Delta x} {D_m (1-\\beta p_0)} p_1 \\left( a_{br} k_{br} m^2_1  + a_{gr}k_{gr} m_1 \\right) \\\\ \n",
+    "    \\Rightarrow \\, & m_0 = m_1 - \\frac {\\Delta x} {D_m (1-\\beta p_0)} p_1 m_1 \\left( a_{br} k_{br} m_1  + a_{gr}k_{gr} \\right) \\\\ \n",
     "\\end{align*}\n",
-    "$$\n"
+    "$$\n",
+    "\n"
    ]
   },
   {
@@ -117,15 +136,11 @@
     "Dm = 8.4\n",
     "Dc = 10\n",
     "beta = 0.1\n",
-    "alpha = 0.5\n",
     "k_s = 2\n",
     "k_gr = 8.7\n",
     "k_br = 2.16E-5\n",
     "a_gr = 2\n",
-    "a_br = 2\n",
-    "m_c = 0.2\n",
-    "l = 0.003\n",
-    "\n"
+    "a_br = 2\n"
    ]
   },
   {
