Added a basic solution plot function

--- a/finite_difference/finite_difference.ipynb
+++ b/finite_difference/finite_difference.ipynb
@@ -365,7 +365,43 @@
     "\n",
     "\n",
     "    \n",
-    "sol = solver(I, 10, 0.6, 0.1, 1e-6, user_action=plot, alpha_func=lambda y: 10*math.tanh(0.5*y))\n"
+    "sol = solver(I, 10, 0.2, 0.1, 1e-6, user_action=None, alpha_func=lambda y: 10*math.tanh(0.5*y))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_solution(I, p, m, cf, cb, x, t, size=(10, 6), plot_initial=True):\n",
+    "    fig, axes = plt.subplots(2, 2, figsize=size, layout='constrained')\n",
+    "    titles = [\n",
+    "        \"p vs x\",\n",
+    "        \"m vs x\",\n",
+    "        \"cf vs x\",\n",
+    "        \"cb vs x\",\n",
+    "    ]\n",
+    "    solutions = {\n",
+    "        \"p\": p,\n",
+    "        \"m\": m,\n",
+    "        \"cf\": cf,\n",
+    "        \"cb\": cb,\n",
+    "    }\n",
+    "    styles = {\n",
+    "        \"p\": \"black\",\n",
+    "        \"m\": \"red\",\n",
+    "        \"cf\": \"green\",\n",
+    "        \"cb\": \"blue\",\n",
+    "    }\n",
+    "\n",
+    "    for ax, title, y in zip(axes.flat, titles, solutions.keys()):\n",
+    "        ax.set_title(title)\n",
+    "        ax.plot(x, solutions[y], styles[y])\n",
+    "        \n",
+    "\n",
+    "\n",
+    "plot_solution(I, *sol)"
    ]
   },
   {
@@ -387,6 +423,24 @@
     "plt.plot(100*(cofilin - cofilin[0])/cofilin[0])\n",
     "plt.title(\"% cofilin error vs iteration\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for i, j in zip([1,2,3], [45,46,47]):\n",
+    "    print(i, j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
