Inital condition plot

--- a/finite_difference/finite_difference.ipynb
+++ b/finite_difference/finite_difference.ipynb
@@ -377,10 +377,10 @@
     "def plot_solution(I, p, m, cf, cb, x, t, size=(10, 6), plot_initial=True):\n",
     "    fig, axes = plt.subplots(2, 2, figsize=size, layout='constrained')\n",
     "    titles = [\n",
-    "        \"p vs x\",\n",
-    "        \"m vs x\",\n",
-    "        \"cf vs x\",\n",
-    "        \"cb vs x\",\n",
+    "        \"Polymer\",\n",
+    "        \"Monomer\",\n",
+    "        \"Cofilin free\",\n",
+    "        \"Cofilin bound\",\n",
     "    ]\n",
     "    solutions = {\n",
     "        \"p\": p,\n",
@@ -395,9 +395,13 @@
     "        \"cb\": \"blue\",\n",
     "    }\n",
     "\n",
-    "    for ax, title, y in zip(axes.flat, titles, solutions.keys()):\n",
+    "    for ax, title, y, init in zip(axes.flat, titles, solutions.keys(), I):\n",
+    "        initial_condition = np.vectorize(init, otypes=[float])(x)\n",
+    "        \n",
     "        ax.set_title(title)\n",
-    "        ax.plot(x, solutions[y], styles[y])\n",
+    "        ax.plot(x, initial_condition, styles[y], ls=\"--\", label=\"Initial Condition\")\n",
+    "        ax.plot(x, solutions[y], styles[y], label=\"Final\")\n",
+    "        ax.legend()\n",
     "        \n",
     "\n",
     "\n",
