Added error plots

--- a/finite_difference/finite_difference.ipynb
+++ b/finite_difference/finite_difference.ipynb
@@ -290,10 +290,10 @@
     "from time import sleep\n",
     "\n",
     "I = [\n",
-    "    lambda p: 0.3 * (p < 4),\n",
-    "    lambda m: 0.8 * (1 < m < 3),\n",
-    "    lambda cf: 0  * (2 < cf < 4),\n",
-    "    lambda cb: 0.2 * (2 < cb < 4),\n",
+    "    lambda p: 0.1 * (p < 0.5),\n",
+    "    lambda m: 0.5, # * (1 < m < 3),\n",
+    "    lambda cf: 0 * (2 < cf < 4),\n",
+    "    lambda cb: 0 * (0 < cb < 4),\n",
     "]\n",
     "\n",
     "# fig = plt.figure()\n",
@@ -303,7 +303,7 @@
     "    v_timestamp = kwargs['v']\n",
     "    v = np.append(v, v_timestamp)\n",
     "\n",
-    "def plot(**kwargs):\n",
+    "def plot_live(**kwargs):\n",
     "    n = kwargs['n']\n",
     "    if not( n % 0.01 <= 1e-6):\n",
     "        return\n",
@@ -320,7 +320,7 @@
     "    plt.plot(x, cf, 'g', label=\"cf\")\n",
     "    plt.plot(x, cb, 'b', label=\"cb\")\n",
     "\n",
-    "    plt.ylim((-0.1, 0.5))\n",
+    "    plt.ylim((-0.5, 1))\n",
     "    plt.legend()\n",
     "    display.display(plt.gcf())\n",
     "    display.clear_output(wait=True)\n",
@@ -365,7 +365,7 @@
     "\n",
     "\n",
     "    \n",
-    "sol = solver(I, 10, 0.2, 0.1, 1e-6, user_action=None, alpha_func=lambda y: 10*math.tanh(0.5*y))\n"
+    "sol = solver(I, 10, 0.8, 0.1, 1e-6, user_action=mass_sum, alpha_func=lambda y: 10*math.tanh(0.5*y))\n"
    ]
   },
   {
@@ -403,48 +403,23 @@
     "        ax.plot(x, solutions[y], styles[y], label=\"Final\")\n",
     "        ax.legend()\n",
     "        \n",
+    "def plot_errors(monomers, cofilin, t, size=(10, 6)):\n",
+    "    monomers_error = 100*(monomers - monomers[0])/monomers[0]\n",
+    "    cofilin_error = 100*(cofilin - cofilin[0])/cofilin[0]\n",
+    "\n",
+    "    fig, axes = plt.subplots(2, 1, figsize=size, layout='constrained')\n",
+    "\n",
+    "    axes[0].plot(t, monomers_error)\n",
+    "    axes[0].set_title(\"Total-monomers deviation %\")\n",
+    "    \n",
+    "    axes[1].plot(t, cofilin_error)\n",
+    "    axes[1].set_title(\"Total-cofilin deviation %\")\n",
+    "    axes[1].set_xlabel(\"t\")\n",
     "\n",
     "\n",
-    "plot_solution(I, *sol)"
+    "plot_errors(monomers, cofilin, sol[-1])\n",
+    "# plot_solution(I, *sol)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(100*(monomers - monomers[0])/monomers[0])\n",
-    "plt.title(\"% monomer error vs iteration\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(100*(cofilin - cofilin[0])/cofilin[0])\n",
-    "plt.title(\"% cofilin error vs iteration\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "for i, j in zip([1,2,3], [45,46,47]):\n",
-    "    print(i, j)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
