--- a/finite_difference/finite_difference.ipynb
+++ b/finite_difference/finite_difference.ipynb
@@ -289,6 +289,9 @@
     "from IPython import display\n",
     "from time import sleep\n",
     "\n",
+    "T = 0.8\n",
+    "L = 10\n",
+    "\n",
     "I = [\n",
     "    lambda p: 0.1 * (p < 0.5),\n",
     "    lambda m: 0.5, # * (1 < m < 3),\n",
@@ -365,7 +368,7 @@
     "\n",
     "\n",
     "    \n",
-    "sol = solver(I, 10, 0.8, 0.1, 1e-6, user_action=mass_sum, alpha_func=lambda y: 10*math.tanh(0.5*y))\n"
+    "sol = solver(I, L, T, 0.1, 1e-6, user_action=mass_sum, alpha_func=lambda y: 10*math.tanh(0.5*y))\n"
    ]
   },
   {
@@ -374,7 +377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_solution(I, p, m, cf, cb, x, t, size=(10, 6), plot_initial=True):\n",
+    "def plot_solution(I, T, p, m, cf, cb, x, t, size=(10, 6), plot_initial=True):\n",
     "    fig, axes = plt.subplots(2, 2, figsize=size, layout='constrained')\n",
     "    titles = [\n",
     "        \"Polymer\",\n",
@@ -400,7 +403,7 @@
     "        \n",
     "        ax.set_title(title)\n",
     "        ax.plot(x, initial_condition, styles[y], ls=\"--\", label=\"Initial Condition\")\n",
-    "        ax.plot(x, solutions[y], styles[y], label=\"Final\")\n",
+    "        ax.plot(x, solutions[y], styles[y], label=f\"t={T}\")\n",
     "        ax.legend()\n",
     "        \n",
     "def plot_errors(monomers, cofilin, t, size=(10, 6)):\n",
@@ -418,7 +421,7 @@
     "\n",
     "\n",
     "plot_errors(monomers, cofilin, sol[-1])\n",
-    "# plot_solution(I, *sol)"
+    "# plot_solution(I, T, *sol)"
    ]
   }
  ],
