--- a/finite_difference/finite_difference.ipynb
+++ b/finite_difference/finite_difference.ipynb
@@ -281,9 +281,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[55], line 89\u001b[0m\n\u001b[0;32m     84\u001b[0m     cofilin\u001b[39m.\u001b[39mappend(sum_cb \u001b[39m+\u001b[39m sum_cf)\n\u001b[0;32m     85\u001b[0m     \u001b[39mreturn\u001b[39;00m \n\u001b[1;32m---> 89\u001b[0m sol \u001b[39m=\u001b[39m solver(I, L, T, \u001b[39m0.1\u001b[39;49m, \u001b[39m1e-6\u001b[39;49m, user_action\u001b[39m=\u001b[39;49mplot_live, alpha_func\u001b[39m=\u001b[39;49m\u001b[39mlambda\u001b[39;49;00m y: \u001b[39m10\u001b[39;49m\u001b[39m*\u001b[39;49mmath\u001b[39m.\u001b[39;49mtanh(\u001b[39m0.5\u001b[39;49m\u001b[39m*\u001b[39;49my))\n",
+      "Cell \u001b[1;32mIn[39], line 62\u001b[0m, in \u001b[0;36msolver\u001b[1;34m(I, L, T, dx, dt, user_action, stability_safety_factor, alpha_func)\u001b[0m\n\u001b[0;32m     60\u001b[0m     \u001b[39m# Set boundaries\u001b[39;00m\n\u001b[0;32m     61\u001b[0m     p[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m], m[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m], cf[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m], cb[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m p_L, m_L, cf_L, cb_L\n\u001b[1;32m---> 62\u001b[0m     p[\u001b[39m0\u001b[39m], m[\u001b[39m0\u001b[39m], cf[\u001b[39m0\u001b[39m], cb[\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m p_0, m_0, cf_0, cb_0\n\u001b[0;32m     64\u001b[0m \u001b[39mreturn\u001b[39;00m p, m, cf, cb, x, t\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import math\n",
     "from IPython import display\n",
@@ -317,14 +510,19 @@
     "    cf = kwargs['cf']\n",
     "    cb = kwargs['cb']\n",
     "\n",
-    "    plt.title(f\"t={n}\")\n",
-    "    plt.plot(x, m, '-r', label=\"monomers\")\n",
-    "    plt.plot(x, p, 'black', label=\"polymer\")\n",
-    "    plt.plot(x, cf, 'g', label=\"cf\")\n",
-    "    plt.plot(x, cb, 'b', label=\"cb\")\n",
+    "    plt.figure(figsize=(8, 6))\n",
     "\n",
-    "    plt.ylim((-0.5, 1))\n",
+    "    plt.plot(x, m, '-r', label=\"Monomer\")\n",
+    "    plt.plot(x, p, 'black', label=\"Polymer\")\n",
+    "    plt.plot(x, cf, 'g', label=\"Cofilin free\")\n",
+    "    plt.plot(x, cb, 'b', label=\"Cofilin bound\")\n",
+    "\n",
+    "    plt.title(f\"t={n}\")\n",
+    "    plt.xlabel(\"x\")\n",
+    "    plt.ylim((-0.1, 1))\n",
+    "    plt.grid()\n",
     "    plt.legend()\n",
+    "\n",
     "    display.display(plt.gcf())\n",
     "    display.clear_output(wait=True)\n",
     "    sleep(0.1)\n",
@@ -368,7 +566,7 @@
     "\n",
     "\n",
     "    \n",
-    "sol = solver(I, L, T, 0.1, 1e-6, user_action=mass_sum, alpha_func=lambda y: 10*math.tanh(0.5*y))\n"
+    "sol = solver(I, L, T, 0.1, 1e-6, user_action=plot_live, alpha_func=lambda y: 10*math.tanh(0.5*y))\n"
    ]
   },
   {
