--- a/finite_difference/finite_difference.ipynb
+++ b/finite_difference/finite_difference.ipynb
@@ -213,7 +213,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solver(I, L, T, dx, dt, user_action=None, stability_safety_factor=1.0, alpha_func=0.5):\n",
+    "def iterate_values(p, m, cf, cb, dt, dx, v, alpha):\n",
+    "    v = m[1] * (a_br*k_br*m[1] + a_gr*k_gr)\n",
+    "    f = get_f(p, cf, cb, dt, dx, v, alpha)\n",
+    "    \n",
+    "    # Calculate boundaries\n",
+    "    p_L, m_L, cf_L, cb_L = 0, m[-2], cf[-2], cb[-2]\n",
+    "    p_0, cf_0, cb_0 = p[1], cf[1], 0\n",
+    "    m_0 = m[1] - (dx/(Dm*(1-beta*p[0]))) * p[1]*m[1] * (a_br*k_br*m[1] + a_gr*k_gr)\n",
+    "\n",
+    "    # Calculate inner-points\n",
+    "    m_flux = Dm*dt/(2*dx**2) * \\\n",
+    "                ((2-beta*(p[1: -1] + p[2:]))*(m[2:] - m[1: -1]) - (2-beta*(p[1: -1] + p[:-2]))*(m[1: -1] - m[:-2]))\n",
+    "    cf_flux = Dc*dt/(dx**2) * (cf[2:] + cf[:-2] - 2*cf[1:-1])\n",
+    "\n",
+    "    # Set boundaries\n",
+    "    p[-1], m[-1], cf[-1], cb[-1] = p_L, m_L, cf_L, cb_L\n",
+    "    p[0], m[0], cf[0], cb[0] = p_0, m_0, cf_0, cb_0\n",
+    "\n",
+    "    # Assign new values\n",
+    "    p[1: -1] = p[1: -1] + f[0]\n",
+    "    m[1: -1] = m[1: -1] +  m_flux + f[1]\n",
+    "    cf[1: -1] = cf[1: -1] + cf_flux + f[2]\n",
+    "    cb[1: -1] = cb[1: -1] + f[3]\n",
+    "\n",
+    "    return p, m, cf, cb, v\n",
+    "\n",
+    "def solver(I, L, T, dx, dt, user_action=None, stability_safety_factor=1.0, alpha_func=0.5, completion_run=False, tolerance=0.01):\n",
     "    \"\"\"_summary_\n",
     "get_f - A function that returns a list of 4 values according to ${\\bf f}$. The spatial derivatives would be calculated based on regular finite difference, e.g. $\\frac{r_p^{n, m+1} - r_p^{n, m}}{\\Delta x}$\n",
     "    Args:\n",
@@ -234,10 +260,6 @@
     "    Nt = int(round(T/dt))\n",
     "    t = np.linspace(0, Nt*dt, Nt+1)      # Mesh points in time\n",
     "\n",
-    "    # Find max(c) using a fake mesh and adapt dx to C and dt\n",
-    "    # c_max = max([c(x_) for x_ in np.linspace(0, L, 101)])\n",
-    "    # dx = dt*c_max/(stability_safety_factor*C)\n",
-    "\n",
     "    Nx = int(round(L/dx))\n",
     "    x = np.linspace(0, L, Nx+1)          # Mesh points in space\n",
     "\n",
@@ -245,251 +267,59 @@
     "    m = np.vectorize(I[1], otypes=[float])(x)\n",
     "    cf = np.vectorize(I[2], otypes=[float])(x)\n",
     "    cb = np.vectorize(I[3], otypes=[float])(x)\n",
-    "\n",
     "    alpha = np.vectorize(alpha_func, otypes=[float])(x)\n",
+    "    v = np.zeros(np.size(x))\n",
     "\n",
     "\n",
     "    for n in t:\n",
-    "        v = m[1] * (a_br*k_br*m[1] + a_gr*k_gr)\n",
-    "\n",
     "        if user_action:\n",
     "            user_action(p=p, m=m, cf=cf, cb=cb, v=v, dx=dx, dt=dt, x=x, t=t, n=n)\n",
     "\n",
-    "        \n",
-    "        f = get_f(p, cf, cb, dt, dx, v, alpha)\n",
-    "        \n",
-    "        # Calculate boundaries\n",
-    "        p_L, m_L, cf_L, cb_L = 0, m[-2], cf[-2], cb[-2]\n",
-    "        p_0, cf_0, cb_0 = p[1], cf[1], 0\n",
-    "        m_0 = m[1] - (dx/(Dm*(1-beta*p[0]))) * p[1]*m[1] * (a_br*k_br*m[1] + a_gr*k_gr)\n",
+    "        iterate_values(p, m, cf, cb, dt, dx, v, alpha)\n",
     "\n",
-    "        # Calculate inner-points\n",
-    "        m_flux = Dm*dt/(2*dx**2) * \\\n",
-    "                    ((2-beta*(p[1: -1] + p[2:]))*(m[2:] - m[1: -1]) - (2-beta*(p[1: -1] + p[:-2]))*(m[1: -1] - m[:-2]))\n",
-    "        p[1: -1] = p[1: -1] + f[0]\n",
-    "        m[1: -1] = m[1: -1] +  m_flux + f[1]\n",
-    "        \n",
-    "        cf[1: -1] = cf[1: -1] + Dc*dt/(dx**2) * (cf[2:] + cf[:-2] - 2*cf[1:-1]) + f[2]\n",
-    "        cb[1: -1] = cb[1: -1] + f[3]\n",
+    "\n",
+    "    completed = not completion_run\n",
+    "    while not completed:\n",
+    "        t = np.append(t, t[-1] + dt)\n",
+    "        if user_action:\n",
+    "            user_action(p=p, m=m, cf=cf, cb=cb, v=v, dx=dx, dt=dt, x=x, t=t, n=t[-1])\n",
+    "\n",
+    "        p_p, m_p, cf_p, cb_p, v_p = np.copy(p), np.copy(m), np.copy(cf), np.copy(cb), np.copy(v)\n",
+    "        iterate_values(p, m, cf, cb, dt, dx, v, alpha)\n",
+    "\n",
+    "        checks = [\n",
+    "            all(np.abs(p - p_p) < tolerance),\n",
+    "            all(np.abs(m - m_p) < tolerance),\n",
+    "            all(np.abs(cf - cf_p) < tolerance),\n",
+    "            all(np.abs(cb - cb_p) < tolerance),\n",
+    "        ]\n",
+    "        completed = all(checks)\n",
+    "\n",
+    "    return p, m, cf, cb, x, t\n",
+    "\n",
+    "\n",
     "            \n",
-    "        # Set boundaries\n",
-    "        p[-1], m[-1], cf[-1], cb[-1] = p_L, m_L, cf_L, cb_L\n",
-    "        p[0], m[0], cf[0], cb[0] = p_0, m_0, cf_0, cb_0\n",
-    "\n",
-    "    return p, m, cf, cb, x, t\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[55], line 89\u001b[0m\n\u001b[0;32m     84\u001b[0m     cofilin\u001b[39m.\u001b[39mappend(sum_cb \u001b[39m+\u001b[39m sum_cf)\n\u001b[0;32m     85\u001b[0m     \u001b[39mreturn\u001b[39;00m \n\u001b[1;32m---> 89\u001b[0m sol \u001b[39m=\u001b[39m solver(I, L, T, \u001b[39m0.1\u001b[39;49m, \u001b[39m1e-6\u001b[39;49m, user_action\u001b[39m=\u001b[39;49mplot_live, alpha_func\u001b[39m=\u001b[39;49m\u001b[39mlambda\u001b[39;49;00m y: \u001b[39m10\u001b[39;49m\u001b[39m*\u001b[39;49mmath\u001b[39m.\u001b[39;49mtanh(\u001b[39m0.5\u001b[39;49m\u001b[39m*\u001b[39;49my))\n",
-      "Cell \u001b[1;32mIn[39], line 62\u001b[0m, in \u001b[0;36msolver\u001b[1;34m(I, L, T, dx, dt, user_action, stability_safety_factor, alpha_func)\u001b[0m\n\u001b[0;32m     60\u001b[0m     \u001b[39m# Set boundaries\u001b[39;00m\n\u001b[0;32m     61\u001b[0m     p[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m], m[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m], cf[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m], cb[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m p_L, m_L, cf_L, cb_L\n\u001b[1;32m---> 62\u001b[0m     p[\u001b[39m0\u001b[39m], m[\u001b[39m0\u001b[39m], cf[\u001b[39m0\u001b[39m], cb[\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m p_0, m_0, cf_0, cb_0\n\u001b[0;32m     64\u001b[0m \u001b[39mreturn\u001b[39;00m p, m, cf, cb, x, t\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "from IPython import display\n",
     "from time import sleep\n",
     "\n",
-    "T = 0.8\n",
+    "T = 5\n",
     "L = 10\n",
     "\n",
     "I = [\n",
     "    lambda p: 0.1 * (p < 0.5),\n",
-    "    lambda m: 0.5, # * (1 < m < 3),\n",
+    "    lambda m: 0.1, # * (1 < m < 1.5),\n",
     "    lambda cf: 0 * (2 < cf < 4),\n",
-    "    lambda cb: 0 * (0 < cb < 4),\n",
+    "    lambda cb: 0.05 * (0 < cb < 0.5),\n",
     "]\n",
     "\n",
     "# fig = plt.figure()\n",
@@ -510,7 +340,7 @@
     "    cf = kwargs['cf']\n",
     "    cb = kwargs['cb']\n",
     "\n",
-    "    plt.figure(figsize=(8, 6))\n",
+    "    fig = plt.figure(figsize=(8, 6))\n",
     "\n",
     "    plt.plot(x, m, '-r', label=\"Monomer\")\n",
     "    plt.plot(x, p, 'black', label=\"Polymer\")\n",
@@ -527,6 +357,7 @@
     "    display.clear_output(wait=True)\n",
     "    sleep(0.1)\n",
     "    plt.clf()\n",
+    "    plt.close(fig)\n",
     "\n",
     "def log_numbers(**kwargs):\n",
     "    parameters = [\"p\", \"m\", \"cf\", \"cb\", \"n\"]\n",
@@ -559,14 +390,13 @@
     "    sum_m = sum(m)/len(x)\n",
     "    sum_cb = sum(cb)/len(x)\n",
     "    sum_cf = sum(cf)/len(x)\n",
-    "    # print(f\"Monomers: {sum_m + sum_p}\")\n",
     "    monomers.append(sum_m + sum_p)\n",
     "    cofilin.append(sum_cb + sum_cf)\n",
     "    return \n",
     "\n",
     "\n",
     "    \n",
-    "sol = solver(I, L, T, 0.1, 1e-6, user_action=plot_live, alpha_func=lambda y: 10*math.tanh(0.5*y))\n"
+    "sol = solver(I, L, T, 0.1, 1e-5, user_action=mass_sum, alpha_func=lambda y: 10*math.tanh(0.5*y), completion_run=True, tolerance=1e-6)\n"
    ]
   },
   {
@@ -575,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_solution(I, T, p, m, cf, cb, x, t, size=(10, 6), plot_initial=True):\n",
+    "def plot_solution(I, T, p, m, cf, cb, x, t, size=(10, 6), completion_run=False, plot_initial=True):\n",
     "    fig, axes = plt.subplots(2, 2, figsize=size, layout='constrained')\n",
     "    titles = [\n",
     "        \"Polymer\",\n",
@@ -596,12 +426,13 @@
     "        \"cb\": \"blue\",\n",
     "    }\n",
     "\n",
+    "    solution_label = f\"t={T} (Final)\" if completion_run else f\"t={T}\"\n",
     "    for ax, title, y, init in zip(axes.flat, titles, solutions.keys(), I):\n",
     "        initial_condition = np.vectorize(init, otypes=[float])(x)\n",
     "        \n",
     "        ax.set_title(title)\n",
     "        ax.plot(x, initial_condition, styles[y], ls=\"--\", label=\"Initial Condition\")\n",
-    "        ax.plot(x, solutions[y], styles[y], label=f\"t={T}\")\n",
+    "        ax.plot(x, solutions[y], styles[y], label=solution_label)\n",
     "        ax.legend()\n",
     "        \n",
     "def plot_errors(monomers, cofilin, t, size=(10, 6)):\n",
@@ -619,7 +450,7 @@
     "\n",
     "\n",
     "plot_errors(monomers, cofilin, sol[-1])\n",
-    "# plot_solution(I, T, *sol)"
+    "plot_solution(I, T, *sol, completion_run=True)"
    ]
   }
  ],
