Example aging effect

--- a/finite_difference/finite_difference.ipynb
+++ b/finite_difference/finite_difference.ipynb
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_f(p, cf, cb, dt, dx, v, alpha):\n",
+    "def get_f(p, cf, cb, dt, dx, v, alpha, age):\n",
     "    \"\"\" Calculates the f part of the discretizied equations\n",
     "\n",
     "    Args:\n",
@@ -193,16 +193,15 @@
     "    global k_s\n",
     "\n",
     "    depoly = (dt*alpha[1: -1])*cb[1:-1]*p[1:-1]\n",
-    "    bind = (dt*k_s)*cf[1:-1]*p[1:-1]\n",
-    "    # print(f\"bind={bind}\")\n",
-    "    # print(f\"Depoly={depoly}\")\n",
+    "    bind = (dt*k_s)*cf[1:-1]*p[1:-1]*age[1: -1]\n",
     "\n",
     "    f_p = - v*dt/(dx) * (p[1:-1] - p[:-2]) - depoly\n",
     "    f_m = depoly\n",
     "    f_cf = depoly - bind\n",
     "    f_cb = - v*dt/dx * (cb[1: -1] - cb[:-2]) - f_cf\n",
+    "    f_age = - depoly\n",
     "    \n",
-    "    return f_p, f_m, f_cf, f_cb\n",
+    "    return f_p, f_m, f_cf, f_cb, f_age\n",
     "\n",
     "\n",
     "# get_f(np.random.random(100), np.random.random(100), np.random.random(100), 0.01, 0.1, 5)"
@@ -214,11 +213,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def iterate_values(p, m, cf, cb, dt, dx, v, alpha):\n",
+    "def iterate_values(p, m, cf, cb, dt, dx, v, alpha, age):\n",
     "    global a_br, k_br, a_gr, k_gr, Dm, Dc, beta, l, m_c\n",
     "\n",
+    "    age += dt * (p >= 0.05)\n",
     "    v = a_br*k_br*(m[1]**2) + a_gr*k_gr*np.heaviside(m[1] - m_c, 0)*(m[1] - m_c)\n",
-    "    f = get_f(p, cf, cb, dt, dx, v, alpha)\n",
+    "    f = get_f(p, cf, cb, dt, dx, v, alpha, age)\n",
     "    \n",
     "    # Calculate boundaries\n",
     "    p_L, m_L, cf_L, cb_L = 0, m[-2], cf[-2], cb[-2]\n",
@@ -238,6 +238,7 @@
     "    m[1: -1] = m[1: -1] +  m_flux + f[1]\n",
     "    cf[1: -1] = cf[1: -1] + cf_flux + f[2]\n",
     "    cb[1: -1] = cb[1: -1] + f[3]\n",
+    "    age[1: -1] = age[1: -1] + f[4]\n",
     "\n",
     "    return p, m, cf, cb, v\n",
     "\n",
@@ -270,6 +271,7 @@
     "    cf = np.vectorize(I[2], otypes=[float])(x)\n",
     "    cb = np.vectorize(I[3], otypes=[float])(x)\n",
     "    alpha = np.vectorize(alpha_func, otypes=[float])(x)\n",
+    "    age = np.zeros(np.size(x))\n",
     "    v = np.zeros(np.size(x))\n",
     "\n",
     "\n",
@@ -277,7 +279,7 @@
     "        if user_action:\n",
     "            user_action(p=p, m=m, cf=cf, cb=cb, v=v, dx=dx, dt=dt, x=x, t=t, n=n)\n",
     "\n",
-    "        iterate_values(p, m, cf, cb, dt, dx, v, alpha)\n",
+    "        iterate_values(p, m, cf, cb, dt, dx, v, alpha, age)\n",
     "\n",
     "\n",
     "    completed = not completion_run\n",
@@ -314,12 +316,12 @@
     "from IPython import display\n",
     "from time import sleep\n",
     "\n",
-    "T = 3\n",
+    "T = 15\n",
     "L = 10\n",
     "\n",
     "I = [\n",
     "    lambda p: 0.2 * (p < 0.5),\n",
-    "    lambda m: 0.6, # * (1 < m < 1.5),\n",
+    "    lambda m: 0.9, # * (1 < m < 1.5),\n",
     "    lambda cf: 0.15,\n",
     "    lambda cb: 0 * (0 < cb < 0.5),\n",
     "]\n",
@@ -398,7 +400,7 @@
     "\n",
     "\n",
     "    \n",
-    "sol = solver(I, L, T, 0.1, 1e-5, user_action=plot_live, alpha_func=lambda y: 5, completion_run=False, tolerance=1e-6)\n"
+    "sol = solver(I, L, T, 0.1, 2e-4, user_action=plot_live, alpha_func=lambda y: 5, completion_run=False, tolerance=1e-6)\n"
    ]
   },
   {
