--- a/finite_difference/finite_difference.ipynb
+++ b/finite_difference/finite_difference.ipynb
@@ -223,7 +223,7 @@
     "    # Calculate boundaries\n",
     "    p_L, m_L, cf_L, cb_L = 0, m[-2], cf[-2], cb[-2]\n",
     "    p_0, cf_0, cb_0 = p[1], cf[1], 0\n",
-    "    m_0 = m[1] - (dx/(Dm*(1-beta*p[0]))) * p[1]*m[1] * (a_br*k_br*m[1] + a_gr*k_gr)\n",
+    "    m_0 = m[1] - (dx/(Dm*(1-beta*p[0]))) * p[1] * (a_br*k_br*m[1]**2 + a_gr*k_gr*(m[1]-m_c))\n",
     "\n",
     "    # Calculate inner-points\n",
     "    m_flux = Dm*dt/(2*dx**2) * \\\n",
