working periodic boundaries

--- a/finite_difference/finite_difference.ipynb
+++ b/finite_difference/finite_difference.ipynb
@@ -133,8 +133,8 @@
    "source": [
     "# Constants\n",
     "\n",
-    "Dm = 8.4\n",
-    "Dc = 10\n",
+    "Dm = 1\n",
+    "Dc = 1\n",
     "beta = 0.2\n",
     "k_s = 2\n",
     "k_gr = 8.7\n",
@@ -192,15 +192,15 @@
     "    \"\"\"\n",
     "    global k_s\n",
     "\n",
-    "    depoly = (dt*alpha[1: -1])*cb[1:-1]*p[1:-1]\n",
-    "    bind = (dt*k_s)*cf[1:-1]*p[1:-1]\n",
+    "    depoly = (dt*alpha)*cb*p\n",
+    "    bind = (dt*k_s)*cf*p\n",
     "    # print(f\"bind={bind}\")\n",
     "    # print(f\"Depoly={depoly}\")\n",
     "\n",
-    "    f_p = - v*dt/(2*dx) * (p[2:] - p[:-2]) - depoly\n",
+    "    f_p = - depoly\n",
     "    f_m = depoly\n",
     "    f_cf = depoly - bind\n",
-    "    f_cb = - v*dt/dx * (cb[1: -1] - cb[:-2]) - f_cf\n",
+    "    f_cb = - f_cf\n",
     "    \n",
     "    return f_p, f_m, f_cf, f_cb\n",
     "\n",
@@ -217,27 +217,36 @@
     "def iterate_values(p, m, cf, cb, dt, dx, v, alpha):\n",
     "    global a_br, k_br, a_gr, k_gr, Dm, Dc, beta, l, m_c\n",
     "\n",
-    "    v = a_br*k_br*(m[1]**2) + a_gr*k_gr*(m[1] - m_c)\n",
+    "    v = 0 #a_br*k_br*(m[1]**2) + a_gr*k_gr*(m[1] - m_c)\n",
     "    f = get_f(p, cf, cb, dt, dx, v, alpha)\n",
     "    \n",
-    "    # Calculate boundaries\n",
-    "    p_L, m_L, cf_L, cb_L = 0, m[-2], cf[-2], cb[-2]\n",
-    "    p_0, cf_0, cb_0 = p[2], cf[1], 0\n",
-    "    m_0 = m[1] - (dx/(Dm*(1-beta*p[0]))) * p[1] * (a_br*k_br*m[1]**2 + a_gr*k_gr*(m[1]-m_c))\n",
+    "\n",
     "\n",
     "    # Calculate inner-points\n",
-    "    m_flux = Dm*dt/(2*dx**2) * \\\n",
-    "                ((2-beta*(p[1: -1] + p[2:]))*(m[2:] - m[1: -1]) - (2-beta*(p[1: -1] + p[:-2]))*(m[1: -1] - m[:-2]))\n",
-    "    cf_flux = Dc*dt/(dx**2) * (cf[2:] + cf[:-2] - 2*cf[1:-1])\n",
+    "    # m_flux = Dm*dt/(2*dx**2) * \\\n",
+    "    #             ((2-beta*(p[1: -1] + p[2:]))*(m[2:] - m[1: -1]) - (2-beta*(p[1: -1] + p[:-2]))*(m[1: -1] - m[:-2]))\n",
+    "    m_next = np.roll(m, 2)\n",
+    "    m_back = np.roll(m, -2)\n",
+    "    m_flux = Dm*dt/(dx**2) * (m_next + m_back - 2*m)\n",
+    "\n",
+    "\n",
+    "    cf_next = np.roll(cf, 2)\n",
+    "    cf_back = np.roll(cf, -2)\n",
+    "    cf_flux = Dc*dt/(dx**2) * (cf_back + cf_next - 2*cf)\n",
+    "\n",
+    "    # Assign new values\n",
+    "    p += f[0]\n",
+    "    m +=  m_flux + f[1]\n",
+    "    cf += cf_flux + f[2]\n",
+    "    cb += f[3]\n",
+    "    \n",
+    "    # Calculate boundaries\n",
+    "    p_L, m_L, cf_L, cb_L = p[0], m[0], cf[0], cb[0]\n",
+    "    p_0, m_0, cf_0, cb_0 = p[-1], m[-1], cf[-1], cb[-1]\n",
+    "\n",
     "    # Set boundaries\n",
     "    p[-1], m[-1], cf[-1], cb[-1] = p_L, m_L, cf_L, cb_L\n",
     "    p[0], m[0], cf[0], cb[0] = p_0, m_0, cf_0, cb_0\n",
-    "\n",
-    "    # Assign new values\n",
-    "    p[1: -1] = p[1: -1] + f[0]\n",
-    "    m[1: -1] = m[1: -1] +  m_flux + f[1]\n",
-    "    cf[1: -1] = cf[1: -1] + cf_flux + f[2]\n",
-    "    cb[1: -1] = cb[1: -1] + f[3]\n",
     "\n",
     "    return p, m, cf, cb, v\n",
     "\n",
@@ -319,13 +328,14 @@
     "\n",
     "monomers = []\n",
     "cofilin = []\n",
+    "mass = []\n",
     "\n",
     "\n",
     "I = [\n",
-    "    lambda p: 0.8 * (p < 0.5),\n",
+    "    lambda p: 0.8 * ( 2 < p < 4),\n",
     "    lambda m: 0.2, # * (1 < m < 1.5),\n",
     "    lambda cf: 0,\n",
-    "    lambda cb: 0 * (0 < cb < 0.5),\n",
+    "    lambda cb: 0.5 * (2 < cb < 4),\n",
     "]\n",
     "\n",
     "# fig = plt.figure()\n",
@@ -364,6 +374,7 @@
     "    monomers_error = 100*(monomers - monomers[0])/monomers[0]\n",
     "    axes[1].plot(t[:len(monomers_error)], monomers_error)\n",
     "    axes[1].set_title(\"Total-monomers deviation %\")\n",
+    "    axes[1].set_ylim((-0.1, 0.1))\n",
     "    axes[1].grid()\n",
     "\n",
     "    display.display(plt.gcf())\n",
@@ -402,6 +413,7 @@
     "    sum_cf = sum(cf)/len(x)\n",
     "    monomers.append(sum_m + sum_p)\n",
     "    cofilin.append(sum_cb + sum_cf)\n",
+    "    mass.append(sum_cb + sum_cf + sum_m + sum_p)\n",
     "    return \n",
     "\n",
     "        \n",
